# reggie-build-py

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
demo-iot/src/demo_iot_generated/: main.py  models.py
src/reggie_build/: app.py  clean.py  cli.py  config.py  create.py  openapi.py  projects.py  pyproject.py  readme.py  sync.py  utils.py  workspace.py  workspace_create.py  workspace_sync.py  workspaces.py
src/reggie_build/openapi_template/: main.jinja
src/reggie_build_py/: app.py  openapi.py  sync.py  utils.py  workspace.py
src/scripts/: openapi.py  projects.py  utils.py  workspace.py
